2005-11-02  David Hampton  <hampton@employees.org>

	* README.svn: Update from README.cvs for switchover.

	* src/gnome-utils/gnc-splash.c: Use a dynamically allocated string
	for the version.

2005-11-02  Derek Atkins  <derek@ihtfp.com>

	* configure.in: don't need GNUCASH_CVS anymore
	* src/gnome-utils/Makefile.am:
	  build gnc-version.h and gnc-svninfo.h.  add the
	  latter to EXTRA_DIST.  Only build svninfo if
	  $(srcdir)/.svn exists.  #define GNUCASH_SVN
	  when that directory exists (at buildtime).
	* src/gnome-utils/gnc-splash.h: use new SVN info.

2005-11-01  David Hampton  <hampton@employees.org>

	* All: Collapse the gnome2 branch back into HEAD.

-=-=-=- cvs gnome2 branch ChangeLog is below this line -=-=-=-

2005-11-01  Karl Hegbloom  <hegbloom@pdx.edu>

        * src/backend/postgres/upgrade.c:
        * src/backend/postgres/price.c: Use glib
        * src/backend/postgres/base-autogen.c:
        * src/backend/postgres/kvp-sql.c: Use glib macros for type
	conversions to suppress compiler warnings on amd64.

        * src/backend/postgres/putil.h: Cast fun to long long int to
	suppress compiler warning on amd64.

2005-10-31  David Hampton  <hampton@employees.org>

	* macros/autogen.sh: Remove obsolete warning about gettext.

	* various: Final sync from HEAD to the gnucash-gnome2-dev branch.

2005-10-30  Joshua Sled  <jsled@asynchronous.org>

	* GNOME2_STATUS: Updates
	* src/gnome-utils/gnc-dense-cal.c (gnc_dense_cal_button_press):
	Better transient-window positioning.
	* src/gnome/schemas/apps_gnucash_dialog_scheduled_transctions.schemas:
	* src/gnome/dialog-scheduledxaction.[ch]: 
	* src/gnome/dialog-sx-from-trans.c: 
	Rename "notify-days" to "remind-days", as it should have been in
	the first place.  Fix conditional-option logic in preferences.
	* src/gnome/glade/sched-xact.glade (SX Preferences):
	Re-layout to visually and semantically mirror SX editor; rename
	"notify-days" to "remind-days"