@@ -8882,7 +8882,7 @@ the created Scheduled Transactions directly.</property>
 	  <child>
 	    <widget class="GtkLabel" id="create_days_label">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Create in advance, days:</property>
+	      <property name="label" translatable="yes">Crea_te in advance, days:</property>
 	      <property name="use_underline">True</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
