@@ -1403,8 +1403,8 @@ click &quot;Ok&quot;.</property>
       <child>
 	<widget class="GtkLabel" id="label847789">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Commercial atm fees threshold</property>
-	  <property name="use_underline">False</property>
+	  <property name="label" translatable="yes">Commercial ATM _fees threshold</property>
+	  <property name="use_underline">True</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
 	  <property name="wrap">False</property>
@@ -1413,6 +1413,7 @@ click &quot;Ok&quot;.</property>
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
+	  <property name="mnemonic_widget">gconf/dialogs/import/generic_matcher/atm_fee_threshold</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">0</property>
@@ -1428,8 +1429,8 @@ click &quot;Ok&quot;.</property>
       <child>
 	<widget class="GtkLabel" id="label847788">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Auto-clear threshold</property>
-	  <property name="use_underline">False</property>
+	  <property name="label" translatable="yes">Auto-c_lear threshold</property>
+	  <property name="use_underline">True</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
 	  <property name="wrap">False</property>
@@ -1438,6 +1439,7 @@ click &quot;Ok&quot;.</property>
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
+	  <property name="mnemonic_widget">gconf/dialogs/import/generic_matcher/auto_clear_threshold</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">0</property>
@@ -1507,7 +1509,7 @@ click &quot;Ok&quot;.</property>
 	  <property name="visible">True</property>
 	  <property name="tooltip" translatable="yes">Use bayesian algorithms to match new transactions with existing accounts.</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">Use bayesian matching</property>
+	  <property name="label" translatable="yes">Use _bayesian matching</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
